k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bintunet
  labels:
    app.kubernetes.io/name: bintunet
